--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ crate-type = ["cdylib"]
 
 [dependencies]
 pam-bindings = { version = "0.1.0" }
-hyper = { version = "0.14.20", features = ["full"]}
-tokio = { version = "1.12.1", features = ["full"] }
+hyper = { version = "0.14.20", features = ["http2", "server"] }
+tokio = { version = "1.19.1", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
-futures = { version = "0.3.21"}
+futures = { version = "0.3.21" }
 url = "2.3.1"
-json = "0.12.4"
+rand = "0.8.5"
+rand_chacha = "0.3.1"
+serde = { version = "1.0", features = ["derive"] }
