--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,8 @@ hyper = { version = "0.14.20", features = ["http2", "server"] }
 tokio = { version = "1.19.1", features = ["full"] }
 reqwest = { version = "0.11", features = ["json"] }
 futures = { version = "0.3.21" }
-url = "2.3.1"
+url = "2.4.0"
 rand = "0.8.5"
 rand_chacha = "0.3.1"
 serde = { version = "1.0", features = ["derive"] }
+serde_urlencoded = "0.7.1"
